fixed text and align it to the center on e-switch page changed color to white

--- a/css/styles.css
+++ b/css/styles.css
@@ -684,6 +684,17 @@ section.books > *:not(:last-child) {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  text-align: center;
+}
+.blogBackground3 .bloginfo-wrapper {
+  padding-top: 170px;
+  color: white;
+}
+.blogBackground3 .bloginfo-wrapper .blogInfoHeader {
+  font-size: 32px;
+}
+.blogBackground3 .bloginfo-wrapper .blogInfoTxt {
+  font-size: 22px;
 }
 .blogBackground3 .blogInfo {
   margin: 0 auto;
@@ -691,14 +702,6 @@ section.books > *:not(:last-child) {
   width: 900px;
   text-align: center;
   color: #fff;
-}
-.blogBackground3 .blogInfo .blogInfoHeader {
-  font-size: 32px;
-  margin-bottom: 60px;
-}
-.blogBackground3 .blogInfo .blogInfoTxt {
-  font-size: 22px;
-  margin-bottom: 60px;
 }
 
 .blog-section {
